test/spec_vectors/memory_copy64/fail/module_22.wat
(module (memory i64 1 1) (func (export "testfn") (memory.copy (i32.const 10) (i32.const 20) (i64.const 30))))